# zenith-browser

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  ipc.ts
frontend/src/components/: ErrorBoundary.tsx  TabBar.tsx  Toolbar.tsx
frontend/src/test/: ErrorBoundary.test.tsx  setup.ts
src/: app.rs  config.rs  db.rs  ipc.rs  main.rs  menu.rs  tab.rs  ui_handler.rs  utils.rs
src/ui/: downloads.html  find_bar.js  history.html  home.html  settings.html  ui.css  ui.html
