[package]
name = "zenith-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
wry = { version = "0.55", features = ["fullscreen"] }
tao = { version = "0.35" }
muda = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
url = "2.5"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
